[package]
name = "spawn"
version = "0.1.0"
authors = ["Songtronix <contact@songtronix.com>"]
edition = "2018"
publish = false

[dependencies]
iced = { path = "../..", features = ["tokio"] }
iced_native = { path = "../../native" }
iced_futures = { path = "../../futures" }
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }

